# v2_intersection_shape_generator-cld

./: .gitignore  CMakeLists.txt  analysis_report.md  analyze_connection_issues.py  detailed_analysis.py  intersection_input.json  intersection_requirements.txt
datas/: 100000012-nu.json  100000598-1.json  100000598.json  100000643-0.json  100000643-1.json  100000643.json  100000699-1.json  100000699.json  intersection_cross.json  intersection_gen.qgs  intersection_jd.json
docs/: 功能详细设计文档.md  架构设计文档.md
src/: CMakeLists.txt  intersection_shape_generator.cpp  intersection_shape_generator.h  main.cpp  types.h  utils.h
src/constraints/: cluster_order.cpp  cluster_order.h  fence_check.h  infeasibility_detector.cpp  infeasibility_detector.h
src/curve/: bezier.cpp  bezier.h  curve_utils.cpp  curve_utils.h  hermite_init.cpp  hermite_init.h
src/generator/: connectivity_generator.cpp  connectivity_generator.h  edge_line_generator.h  polygon_builder.h
src/io/: iodata_json.h  iodata_shapefile.h  shapefile.hpp
src/optimizer/: lbfgs_solver.cpp  lbfgs_solver.h  penalty_cost.cpp  penalty_cost.h  sdf_field.cpp  sdf_field.h
src/utils/: clipper.hpp  quadtree.cpp  quadtree.h
tests/: CMakeLists.txt  diag_all_violations.cpp  diag_cluster.cpp  diag_cluster_pairs.cpp  diag_crosswalk.cpp  diag_focus.cpp  diag_pair_isect.cpp  diag_uturn.cpp  diag_uturn_geom.cpp  scenario_builder.h  test_bezier.cpp  test_cluster.cpp  test_edge_line.cpp  test_infeasibility.cpp  test_integration.cpp  test_intersection_input_regression.cpp  test_optimizer.cpp  test_scenarios.cpp  test_sdf.cpp
